fix up margins for about section and translate the divs into a table so they are aligned straight

--- a/assets/css/rica.css
+++ b/assets/css/rica.css
@@ -234,13 +234,13 @@ color: #33CC66;
   background-color: #66CC66;
   text-align: center;
   color:white;
-  height:40em;
+  height:35em;
 }
 /*#who-we-are h1 {
   font-family: Montserrat;
   font-size:;
 }*/
-.about-section {
+/*.about-section {
   display: inline-block;
   width: 33%;
   font-size: 24px;
@@ -250,9 +250,26 @@ color: #33CC66;
 .about-section p {
   font-size: 20px;
   padding: 5px;
-}
+}*/
 
 .glyphicon {
   font-size: 35px;
   /*color:white;*/
+}
+
+.about-table {
+  padding-right: 30px;
+  text-align: left;
+  width: 33%;
+}
+
+#about-table {
+  margin-top: 40px;
+}
+
+#about-heading {
+  margin-top: 60px;
+  text-align: center;
+  font-family: montserrat;
+  font-size: 50px;
 }
